MIUI西班牙 translations added.

--- a/src/packages/apps/Notes/res/values/strings.xml
+++ b/src/packages/apps/Notes/res/values/strings.xml
@@ -1,117 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">Notes</string>
-    <string name="app_widget2x2">Notes 2x2</string>
-    <string name="app_widget4x4">Notes 4x4</string>
-    <string name="widget_havenot_content">No associated note found, click to create associated note.</string>
-    <string name="widget_under_visit_mode">Privacy mode，can not see note content</string>
+    <string name="app_name">Notas</string>
+    <string name="app_widget2x2">Notas 2x2</string>
+    <string name="app_widget4x4">Notas 4x4</string>
+    <string name="widget_havenot_content">No hay notas asociadas, haga clic para crear notas asociadas.</string>
+    <string name="widget_under_visit_mode">Está en modo invitado, no puede ver el contenido</string>
     <string name="notelist_string_info">...</string>
-    <string name="notelist_menu_new">Add note</string>
-    <string name="delete_remind_time_message">Delete reminder successfully</string>
-    <string name="set_remind_time_message">Set reminder</string>
-    <string name="note_alert_expired">Expired</string>
-    <string name="format_date_ymd">yyyyMMdd</string>
-    <string name="format_datetime_mdhm">MMMd kk:mm</string>
-    <string name="notealert_ok">Got it</string>
-    <string name="notealert_enter">Take a look</string>
-    <string name="note_link_tel">Call</string>
-    <string name="note_link_email">Send email</string>
-    <string name="note_link_web">Browse web</string>
-    <string name="note_link_other">Open map</string>
+    <string name="notelist_menu_new">Añadir nota</string>
+    <string name="delete_remind_time_message">Aviso eliminado correctamente</string>
+    <string name="set_remind_time_message">establecer aviso</string>
+    <string name="note_alert_expired">Expirado</string>
+    <string name="format_date_ymd">ddMMyyyy</string>
+    <string name="format_datetime_mdhm">d MMM kk:mm</string>
+    <string name="notealert_ok">Lo tengo</string>
+    <string name="notealert_enter">Echa un vistazo</string>
+    <string name="note_link_tel">Llamar</string>
+    <string name="note_link_email">Enviar email</string>
+    <string name="note_link_web">Abrir web</string>
+    <string name="note_link_other">Abrir mapa</string>
     <!-- Text export file information -->
     <string name="file_path">/MIUI/notes/</string>
     <string name="file_name_txt_format">notes_%s.txt</string>
     <!-- notes list string -->
     <string name="format_folder_files_count">(%d)</string>
-    <string name="menu_create_folder">New Folder</string>
-    <string name="menu_export_text">Export text</string>
-    <string name="menu_sync">Sync</string>
-    <string name="menu_sync_cancel">Cancel syncing</string>
-    <string name="menu_setting">Settings</string>
-    <string name="menu_search">Search</string>
-    <string name="menu_delete">Delete</string>
-    <string name="menu_move">Move to folder</string>
-    <string name="menu_select_title">%d selected</string>
-    <string name="menu_select_none">Nothing selected, the operation is invalid</string>
-    <string name="menu_select_all">Select all</string>
-    <string name="menu_deselect_all">Deselect all</string>
-    <string name="menu_font_size">Font size</string>
-    <string name="menu_font_small">Small</string>
-    <string name="menu_font_normal">Medium</string>
-    <string name="menu_font_large">Large</string>
-    <string name="menu_font_super">Super</string>
-    <string name="menu_list_mode">Enter check list</string>
-    <string name="menu_normal_mode">Leave check list</string>
-    <string name="menu_folder_view">View folder</string>
-    <string name="menu_folder_delete">Delete folder</string>
-    <string name="menu_folder_change_name">Change folder name</string>
-    <string name="folder_exist">The folder %1$s exist, please rename</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send_to_desktop">Send to home</string>
-    <string name="menu_alert">Remind me</string>
-    <string name="menu_remove_remind">Delete reminder</string>
-    <string name="menu_title_select_folder">Select folder</string>
-    <string name="menu_move_parent_folder">Parent folder</string>
-    <string name="info_note_enter_desktop">Note added to home</string>
-    <string name="alert_message_delete_folder">Confirm to delete folder and its notes?</string>
-    <string name="alert_title_delete">Delete selected notes</string>
-    <string name="alert_message_delete_notes">Confirm to delete the selected %d notes?</string>
-    <string name="alert_message_delete_note">Confirm to delete this note?</string>
-    <string name="format_move_notes_to_folder">Have moved selected %1$d notes to %2$s folder</string>
+    <string name="menu_create_folder">Nueva carpeta</string>
+    <string name="menu_export_text">Exportar</string>
+    <string name="menu_sync">Sincronizar</string>
+    <string name="menu_sync_cancel">Cancelar sincronización</string>
+    <string name="menu_setting">Ajustes</string>
+    <string name="menu_search">Buscar</string>
+    <string name="menu_delete">Borrar</string>
+    <string name="menu_move">Mover a carpeta</string>
+    <string name="menu_select_title">%d seleccionadas</string>
+    <string name="menu_select_none">Ninguna seleccionada, la operación no puede realizarse</string>
+    <string name="menu_select_all">Seleccionar todo</string>
+    <string name="menu_deselect_all">Deseleccionar todo</string>
+    <string name="menu_font_size">Tamaño de la fuente</string>
+    <string name="menu_font_small">Pequeña</string>
+    <string name="menu_font_normal">Media</string>
+    <string name="menu_font_large">Grande</string>
+    <string name="menu_font_super">Extra</string>
+    <string name="menu_list_mode">Ver lista</string>
+    <string name="menu_normal_mode">Dejar de ver lista</string>
+    <string name="menu_folder_view">Ver carpeta</string>
+    <string name="menu_folder_delete">Borrar carpeta</string>
+    <string name="menu_folder_change_name">Renombrar carpeta</string>
+    <string name="folder_exist">La carpeta %1$s ya existe, renómbrela</string>
+    <string name="menu_share">Compartir</string>
+    <string name="menu_send_to_desktop">Enviar a escritorio</string>
+    <string name="menu_alert">Recordar</string>
+    <string name="menu_remove_remind">Borrar recordatorio</string>    
+    <string name="menu_title_select_folder">Elegir carpeta</string>
+    <string name="menu_move_parent_folder">Carpeta principal</string>
+    <string name="info_note_enter_desktop">Nota añadida al escritorio</string>
+    <string name="alert_message_delete_folder">¿Seguro que desea borrar la carpeta y sus notas?</string>
+    <string name="alert_title_delete">Borrar notas seleccionadas</string>
+    <string name="alert_message_delete_notes">¿Seguro que desea borrar las %d notas seleccionadas?</string>
+    <string name="alert_message_delete_note">¿Seguro que desa borrar esta nota?</string>
+    <string name="format_move_notes_to_folder">Se han movido %1$d nota(s) a la carpeta %2$s</string>
     <!-- Error information -->
-    <string name="error_sdcard_unmounted">SD card busy, not available now</string>
-    <string name="error_sdcard_export">Export failed, please check SD card</string>
-    <string name="error_note_not_exist">The note is not exist</string>
-    <string name="error_note_empty_for_clock">Sorry, can not set clock on empty note</string>
-    <string name="error_note_empty_for_send_to_desktop">Sorry, can not send and empty note to home</string>
-    <string name="success_sdcard_export">Export successful</string>
-    <string name="failed_sdcard_export">Export fail</string>
-    <string name="format_exported_file_location">Export text file (%1$s) to SD (%2$s) directory</string>
+    <string name="error_sdcard_unmounted">Tarjeta SD ocupada, ahora no está disponible</string>
+    <string name="error_sdcard_export">Fallo al exportar, por favor compruebe la tarjeta SD</string>
+    <string name="error_note_not_exist">La nota no existe</string>
+    <string name="error_note_empty_for_clock">Lo sentimos, no se puede establecer la hora en una nota vacía</string>
+    <string name="error_note_empty_for_send_to_desktop">Lo sentimos, no se puede enviar una nota vacia al escritorio</string>
+    <string name="success_sdcard_export">Exportado con éxito</string>
+    <string name="failed_sdcard_export">Fallo al exportar</string>
+    <string name="format_exported_file_location">Exportado archivo de texto (%1$s) al directorio de la SD (%2$s)</string>
     <!-- Sync -->
-    <string name="ticker_syncing">Syncing notes...</string>
-    <string name="ticker_success">Sync is successful</string>
-    <string name="ticker_fail">Sync is failed</string>
-    <string name="ticker_cancel">Sync is canceled</string>
-    <string name="success_sync_account">Sync is successful with account %1$s</string>
-    <string name="error_sync_network">Sync failed, please check network and account settings</string>
-    <string name="error_sync_internal">Sync failed, internal error occurs</string>
-    <string name="error_sync_cancelled">Sync is canceled</string>
-    <string name="sync_progress_login">Logging into %1$s...</string>
-    <string name="sync_progress_init_list">Getting remote note list...</string>
-    <string name="sync_progress_syncing">Synchronize local notes with Google Task...</string>
+    <string name="ticker_syncing">Sincronizando notas...</string>
+    <string name="ticker_success">Sincronización correcta</string>
+    <string name="ticker_fail">Sincronización fallida</string>
+    <string name="ticker_cancel">Sincronización cancelada</string>
+    <string name="success_sync_account">Sincronización correcta con la cuenta %1$s</string>
+    <string name="error_sync_network">Fallo al sincronizar, por favor compruebe la configuración de red y la cuenta</string>
+    <string name="error_sync_internal">Fallo al sincronizar, ocurrieron errores internos</string>
+    <string name="error_sync_cancelled">Sincronización cancelada</string>
+    <string name="sync_progress_login">Accediendo a %1$s...</string>
+    <string name="sync_progress_init_list">Obteniendo lista de notas remota...</string>
+    <string name="sync_progress_syncing">Sincronizando notas con Google Task...</string>
     <!-- Preferences -->
-    <string name="preferences_title">Settings</string>
-    <string name="preferences_account_title">Sync account</string>
-    <string name="preferences_account_summary">Sync notes with google task</string>
-    <string name="preferences_last_sync_time">Last sync time %1$s</string>
-    <string name="preferences_last_sync_time_format">yyyy-MM-dd hh:mm:ss</string>
-    <string name="preferences_add_account">Add account</string>
-    <string name="preferences_menu_change_account">Change sync account</string>
-    <string name="preferences_menu_remove_account">Remove sync account</string>
-    <string name="preferences_menu_cancel">Cancel</string>
-    <string name="preferences_button_sync_immediately">Sync immediately</string>
-    <string name="preferences_button_sync_cancel">Cancel syncing</string>
-    <string name="preferences_dialog_change_account_title">Current account %1$s</string>
-    <string name="preferences_dialog_change_account_warn_msg">All sync related information will be deleted, which may result in duplicated items sometime</string>
-    <string name="preferences_dialog_select_account_title">Sync notes</string>
-    <string name="preferences_dialog_select_account_tips">Please select a google account. Local notes will be synced with google task.</string>
-    <string name="preferences_toast_cannot_change_account">Cannot change the account because sync is in progress</string>
-    <string name="preferences_toast_success_set_accout">%1$s has been set as the sync account</string>
-    <string name="preferences_bg_random_appear_title">New note background color random</string>
+    <string name="preferences_title">Ajustes</string>
+    <string name="preferences_account_title">Cuenta de sincronización</string>
+    <string name="preferences_account_summary">Sincronizar notas con Google Task</string>
+    <string name="preferences_last_sync_time">Última sincronización %1$s</string>
+    <string name="preferences_last_sync_time_format">dd-MM-yyyy hh:mm:ss</string>
+    <string name="preferences_add_account">Añadir cuenta</string>
+    <string name="preferences_menu_change_account">Cambiar cuenta de sincronización</string>
+    <string name="preferences_menu_remove_account">Borrar cuenta de sincronización</string>
+    <string name="preferences_menu_cancel">Cancelar</string>
+    <string name="preferences_button_sync_immediately">Sincronizar ahora</string>
+    <string name="preferences_button_sync_cancel">Cancelar sincronización</string>
+    <string name="preferences_dialog_change_account_title">Cuenta actual %1$s</string>
+    <string name="preferences_dialog_change_account_warn_msg">Toda la información relacionada con la anterior cuenta será borrada</string>
+    <string name="preferences_dialog_select_account_title">Sincronizar notas</string>
+    <string name="preferences_dialog_select_account_tips">Por favor seleccione una cuenta Google. Las notas se sincronizarán con Google Task.</string>
+    <string name="preferences_toast_cannot_change_account">No se puede cambiar de cuenta por que hay una sincronización en curso</string>
+    <string name="preferences_toast_success_set_accout">%1$s ha sido establecida como cuenta de sincronización</string>
+    <string name="preferences_bg_random_appear_title">Color aleatorio</string>
 
-    <string name="button_delete">Delete</string>
-    <string name="call_record_folder_name">Call notes</string>
-    <string name="hint_foler_name">Input name</string>
+    <string name="button_delete">Borrar</string>
+    <string name="call_record_folder_name">Llamadas grabadas</string>
+    <string name="hint_foler_name">Introducir nombre</string>
 
-    <string name="search_label">Searching Notes</string>
-    <string name="search_hint">Search notes</string>
-    <string name="search_setting_description">Text in your notes</string>
-    <string name="search">Notes</string>
+    <string name="search_label">Buscando Notas...</string>
+    <string name="search_hint">Buscar notas</string>
+    <string name="search_setting_description">Texto en las notas</string>
+    <string name="search">Notas</string>
     <plurals name="search_results_title">
          <item quantity="one"><xliff:g id="number" example="1">%1$s</xliff:g> result for \"<xliff:g id="search" example="???">%2$s</xliff:g>\"</item>
         <!-- Case of 0 or 2 or more results. -->
         <item quantity="other"><xliff:g id="number" example="15">%1$s</xliff:g> results for \"<xliff:g id="search" example="???">%2$s</xliff:g>\"</item>
     </plurals>
-    <string name="select_text">Select text</string>
+    <string name="select_text">Seleccionar texto</string>
 </resources>
