MIUI西班牙 translations added.

--- a/src/packages/apps/SpeechRecorder/res/values/strings.xml
+++ b/src/packages/apps/SpeechRecorder/res/values/strings.xml
@@ -16,10 +16,10 @@
 
 <resources>
     <!-- application name and title of error dialogs-->
-    <string name="app_name">Speech Recorder</string>
+    <string name="app_name">Grabadora</string>
 
-    <string name="speechrecorderlabel">Speech Recorder</string>
-    <string name="recordButton">Record</string>
+    <string name="speechrecorderlabel">Grabadora</string>
+    <string name="recordButton">Grabar</string>
     <string name="redoButton">Redo</string>
     <string name="callRadioButton">\"call ...\"\nUtterances</string>
     <string name="dialNanpRadioButton">\"dial NANP\"\nUtterances</string>
