MIUI西班牙 translations added.

--- a/src/packages/apps/ThemeManager/res/values/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values/strings.xml
@@ -1,74 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Themes</string>
-    <string name="theme_activity_lable">Themes</string>
+    <string name="app_name">Temas</string>
+    <string name="theme_activity_lable">Temas</string>
 
-    <string name="theme_changing_dialog_title">Applying new theme, please wait...</string>
-    <string name="theme_changed_message">Successfully applied.</string>
-    <string name="theme_changed_failed_message">Failed to apply theme.</string>
+    <string name="theme_changing_dialog_title">Aplicando nuevo Tema, espere...</string>
+    <string name="theme_changed_message">Aplicado con éxito.</string>
+    <string name="theme_changed_failed_message">Fallo al aplicar tema.</string>
 
-    <string name="backup_preference_title">Backup Theme</string>
-    <string name="backup_theme_dialog_ok">Backup</string>
-    <string name="backup_theme_dialog_message">Backup the current theme to\n%1$s</string>
-    <string name="backup_theme_progress_message">Backing up theme files, please wait...</string>
-    <string name="backup_theme_success_message">Theme backed up successfully.</string>
+    <string name="backup_preference_title">Backup del tema actual</string>
+    <string name="backup_theme_dialog_ok">Aceptar</string>
+    <string name="backup_theme_dialog_message">Se creará un Backup del tema actual en:\n%1$s</string>
+    <string name="backup_theme_progress_message">Realizando copia de seguridad...</string>
+    <string name="backup_theme_success_message">Copia de seguridad realizada correctamente</string>
 
-    <string name="theme_description_title_default">Default</string>
-    <string name="theme_description_title_customized">Custom</string>
+    <string name="theme_description_title_default">Por defecto</string>
+    <string name="theme_description_title_customized">Personalizado</string>
 
-    <string name="component_category_title">Customize</string>
-    <string name="component_category_style_title">Styles</string>
-    <string name="component_category_wallpaper_title">Wallpapers</string>
-    <string name="component_category_ringtone_title">Ringtones</string>
-    <string name="theme_component_title_framework">Framework</string>
-    <string name="theme_component_title_mms">SMS</string>
-    <string name="theme_component_title_wallpaper">Wallpaper</string>
-    <string name="theme_component_title_lockwallpaper">Lockscreen Wallpaper</string>
-    <string name="theme_component_title_icon">Icon</string>
-    <string name="theme_component_title_boot_animation">Boot Animation</string>
-    <string name="theme_component_title_boot_audio">Boot Audio</string>
-    <string name="theme_component_title_font">Font</string>
-    <string name="theme_component_title_ringtone">Ringtone</string>
-    <string name="theme_component_title_notification">Notification</string>
-    <string name="theme_component_title_alarm">Alarm</string>
-    <string name="theme_component_title_contact">Dialer</string>
-    <string name="theme_component_title_lockstyle">Lockscreen</string>
-    <string name="theme_component_title_statusbar">Status Bar</string>
-    <string name="theme_component_title_launcher">Home</string>
-    <string name="theme_component_title_audio_effect">AudioEffect</string>
-    <string name="theme_component_title_clock">Clock</string>
-    <string name="theme_component_title_photo_frame">PhotoFrame</string>
-    <string name="theme_component_title_others">Others</string>
-    <string name="theme_component_title_all">Theme</string>
+    <string name="component_category_title">Personalizar tema</string>
+    <string name="component_category_style_title">Estilos</string>
+    <string name="component_category_wallpaper_title">Fondos de pantalla</string>
+    <string name="component_category_ringtone_title">Sonidos</string>
+    <string name="theme_component_title_framework">Sistema</string>
+    <string name="theme_component_title_mms">Mensajeria</string>
+    <string name="theme_component_title_wallpaper">Fondos de escritorio</string>
+    <string name="theme_component_title_lockwallpaper">Fondos de bloqueo</string>
+    <string name="theme_component_title_icon">Iconos</string>
+    <string name="theme_component_title_boot_animation">Imagen de arranque</string>
+    <string name="theme_component_title_boot_audio">Sonido de arranque</string>
+    <string name="theme_component_title_font">Fuentes</string>
+    <string name="theme_component_title_ringtone">Tono de llamada</string>
+    <string name="theme_component_title_notification">Tono de notificación</string>
+    <string name="theme_component_title_alarm">Tono de alarma</string>
+    <string name="theme_component_title_contact">Teléfono</string>
+    <string name="theme_component_title_lockstyle">Pantalla de bloqueo</string>
+    <string name="theme_component_title_statusbar">Barra de estado</string>
+    <string name="theme_component_title_launcher">Escritorio</string>
+    <string name="theme_component_title_audio_effect">Efectos de audio</string>
+    <string name="theme_component_title_clock">Relojes</string>
+    <string name="theme_component_title_photo_frame">Marco de fotos</string>
+    <string name="theme_component_title_others">Otros</string>
+    <string name="theme_component_title_all">Temas</string>
 
-    <string name="apply_theme_no_select_message">Please select components.</string>
-    <string name="apply_lockscreen_paper_tips">The lockscreen currently in use does not support changing lockscreen wallpaper, new lockscreen wallpaper may not be visible.</string>
+    <string name="apply_theme_no_select_message">Por favor escoja componentes</string>
+    <string name="apply_lockscreen_paper_tips">Si utiliza un bloqueo mediante patrón o PIN no podrá ver el nuevo fondo seleccionado mientras no los desactive</string>
 
-    <string name="play_all_audio_effect">play audio effect (total: %1$s)</string>
+    <string name="play_all_audio_effect">Efectos sonoros (Total: %1$s)</string>
 
-    <string name="theme_import">Import from SD card</string>
-    <string name="theme_select_others">Others</string>
-    <string name="third_party_pickers_activity_title">Set %1$s</string>
+    <string name="theme_import">Importar de SD</string>
+    <string name="theme_select_others">Otros</string>
+    <string name="third_party_pickers_activity_title">Establecer %1$s</string>
 
-    <string name="wallpaper_settings">Wallpaper settings</string>
-    <string name="desktop_wallpaper">Desktop wallpaper</string>
-    <string name="live_wallpaper">Live wallpaper</string>
-    <string name="lockscreen_wallpaper">Lockscreen wallpaper</string>
-    <string name="change_wallpaper">Wallpaper</string>
+    <string name="wallpaper_settings">Ajustes de fondos de pantalla</string>
+    <string name="desktop_wallpaper">Fondo de pantalla</string>
+    <string name="live_wallpaper">Fondo de pantalla animado</string>
+    <string name="lockscreen_wallpaper">Fondo de bloqueo</string>
+    <string name="change_wallpaper">Fondo de pantalla</string>
 
-    <string name="component_settings_title">Customize theme</string>
-    <string name="component_select_title">Selected %1$s components</string>
-    <string name="component_include_title">Contains %1$s components</string>
-    <string name="component_screen_title">Including wallpaper</string>
-    <string name="resource_fail_to_show">Theme did not contain the required resources.</string>
+    <string name="component_settings_title">Personalizar</string>
+    <string name="component_select_title">Componentes: %1$s</string>
+    <string name="component_include_title">Componentes: %1$s</string>
+    <string name="component_screen_title">Fondo de pantalla</string>
+    <string name="resource_fail_to_show">El paquete de temas no contiene los recursos apropiados</string>
 
-    <string name="theme_format_wrong">Wrong format!</string>
+    <string name="theme_format_wrong_content">Formato no compatible!</string>
 
-    <string name="apply_font_tip">The theme contains font, so reboot is needed.</string>
-    <string name="apply_font_btn_reboot">Apply and reboot</string>
-    <string name="apply_font_btn_exclude">Apply without font</string>
+    <string name="apply_font_tip">El tema contiene una nueva fuente, es necesario reiniciar.</string>
+    <string name="apply_font_btn_reboot">Aplicar y reiniciar</string>
+    <string name="apply_font_btn_exclude">Aplicar sin la nueva fuente</string>
 
     <string name="title_local">Local</string>
     <string name="title_online">Online</string>
-    <string name="title_component">Mix</string>
+    <string name="title_component">Mezcla</string>
 </resources>
